{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 367,
  "lineage": "8db5898f-f3b4-b445-a4ac-5409de548e8b",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-021ea058442ce4a15",
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:instance/i-0ffc014344d1cccf5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffc014344d1cccf5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "optima-jp-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037e2e9389ecb31fb",
            "private_dns": "ip-10-0-1-163.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-13-114-103-96.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.114.103.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:764673263023:key/cfc0710f-e23b-4999-9fec-32b9f3f7ff1d",
                "throughput": 125,
                "volume_id": "vol-014a98cda232b4f6e",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f1580592293aac2",
            "tags": {
              "Country": "jp",
              "Environment": "demo",
              "Name": "optima-jp-demo-api",
              "OS": "windows",
              "Role": "api-server"
            },
            "tags_all": {
              "Country": "jp",
              "Environment": "demo",
              "Name": "optima-jp-demo-api",
              "OS": "windows",
              "Role": "api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f228b00347514a0c"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.http.my_ip",
            "module.compute.aws_db_instance.optima",
            "module.compute.aws_db_subnet_group.optima",
            "module.compute.aws_key_pair.optima",
            "module.compute.aws_security_group.api_server",
            "module.compute.aws_security_group.rds",
            "module.compute.aws_security_group.ui_server",
            "module.compute.data.aws_ami.windows_server",
            "module.compute.tls_private_key.optima",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ui_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0244ef75e95122fd9",
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:instance/i-0c504b3bcb073b1bf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c504b3bcb073b1bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "optima-jp-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0828c40f9e1c57724",
            "private_dns": "ip-10-0-2-146.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.146",
            "public_dns": "ec2-52-198-19-4.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.198.19.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:764673263023:key/cfc0710f-e23b-4999-9fec-32b9f3f7ff1d",
                "throughput": 125,
                "volume_id": "vol-0d2b4fe4d2b6631b2",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01508408eff7f17df",
            "tags": {
              "Country": "jp",
              "Environment": "demo",
              "Name": "optima-jp-demo-ui",
              "OS": "ubuntu",
              "Role": "ui-server"
            },
            "tags_all": {
              "Country": "jp",
              "Environment": "demo",
              "Name": "optima-jp-demo-ui",
              "OS": "ubuntu",
              "Role": "ui-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cadb775feee24666"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.http.my_ip",
            "module.compute.aws_db_instance.optima",
            "module.compute.aws_db_subnet_group.optima",
            "module.compute.aws_instance.api_server",
            "module.compute.aws_key_pair.optima",
            "module.compute.aws_security_group.api_server",
            "module.compute.aws_security_group.rds",
            "module.compute.aws_security_group.ui_server",
            "module.compute.data.aws_ami.ubuntu",
            "module.compute.data.aws_ami.windows_server",
            "module.compute.tls_private_key.optima",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:security-group/sg-0f228b00347514a0c",
            "description": "Security group for Optima API Server (.NET 7/Windows)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f228b00347514a0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5986,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5986
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "optima-jp-demo-api-20251029161420197500000004",
            "name_prefix": "optima-jp-demo-api-",
            "owner_id": "764673263023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "optima-jp-demo-api-sg"
            },
            "tags_all": {
              "Name": "optima-jp-demo-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:security-group/sg-0324bca4e81f38b73",
            "description": "Security group for Optima RDS SQL Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0324bca4e81f38b73",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cadb775feee24666"
                ],
                "self": false,
                "to_port": 1433
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f228b00347514a0c"
                ],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "optima-jp-demo-rds-20251029161425075300000006",
            "name_prefix": "optima-jp-demo-rds-",
            "owner_id": "764673263023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "optima-jp-demo-rds-sg"
            },
            "tags_all": {
              "Name": "optima-jp-demo-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.http.my_ip",
            "module.compute.aws_security_group.api_server",
            "module.compute.aws_security_group.ui_server",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ui_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:security-group/sg-0cadb775feee24666",
            "description": "Security group for Optima UI Server (Laravel/Ubuntu)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cadb775feee24666",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "103.158.154.7/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "optima-jp-demo-ui-20251029161420194300000003",
            "name_prefix": "optima-jp-demo-ui-",
            "owner_id": "764673263023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "optima-jp-demo-ui-sg"
            },
            "tags_all": {
              "Name": "optima-jp-demo-ui-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.http.my_ip",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:internet-gateway/igw-0dd8f20b9f90b9efd",
            "id": "igw-0dd8f20b9f90b9efd",
            "owner_id": "764673263023",
            "tags": {
              "Name": "optima-jp-demo-igw"
            },
            "tags_all": {
              "Name": "optima-jp-demo-igw"
            },
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:route-table/rtb-0492186b4df0e6fc9",
            "id": "rtb-0492186b4df0e6fc9",
            "owner_id": "764673263023",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "optima-jp-demo-private-rt"
            },
            "tags_all": {
              "Name": "optima-jp-demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:route-table/rtb-077019da3efb1946b",
            "id": "rtb-077019da3efb1946b",
            "owner_id": "764673263023",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd8f20b9f90b9efd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "optima-jp-demo-public-rt"
            },
            "tags_all": {
              "Name": "optima-jp-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f03c6b09517093cf",
            "route_table_id": "rtb-0492186b4df0e6fc9",
            "subnet_id": "subnet-0405b3a7971896a75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e3d63be17182077",
            "route_table_id": "rtb-0492186b4df0e6fc9",
            "subnet_id": "subnet-099875797633939b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053e2c4c5a6c3fa7a",
            "route_table_id": "rtb-077019da3efb1946b",
            "subnet_id": "subnet-09f1580592293aac2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08dc1cab3da803c78",
            "route_table_id": "rtb-077019da3efb1946b",
            "subnet_id": "subnet-01508408eff7f17df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "open",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:security-group/sg-02e9cd2a5b782420e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e9cd2a5b782420e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "optima-jp-demo-open-20251029161420187400000002",
            "name_prefix": "optima-jp-demo-open-",
            "owner_id": "764673263023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "optima-jp-demo-open-sg"
            },
            "tags_all": {
              "Name": "optima-jp-demo-open-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:subnet/subnet-0405b3a7971896a75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0405b3a7971896a75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764673263023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "optima-jp-demo-private-1",
              "Type": "private"
            },
            "tags_all": {
              "Name": "optima-jp-demo-private-1",
              "Type": "private"
            },
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:subnet/subnet-099875797633939b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099875797633939b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764673263023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "optima-jp-demo-private-2",
              "Type": "private"
            },
            "tags_all": {
              "Name": "optima-jp-demo-private-2",
              "Type": "private"
            },
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:subnet/subnet-09f1580592293aac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f1580592293aac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764673263023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "optima-jp-demo-public-1",
              "Type": "public"
            },
            "tags_all": {
              "Name": "optima-jp-demo-public-1",
              "Type": "public"
            },
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:subnet/subnet-01508408eff7f17df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01508408eff7f17df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764673263023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "optima-jp-demo-public-2",
              "Type": "public"
            },
            "tags_all": {
              "Name": "optima-jp-demo-public-2",
              "Type": "public"
            },
            "vpc_id": "vpc-04ea85205654fd520"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:764673263023:vpc/vpc-04ea85205654fd520",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc42f385411a371e",
            "default_route_table_id": "rtb-05e0716c295ddf551",
            "default_security_group_id": "sg-06c96c32edf206c0b",
            "dhcp_options_id": "dopt-60f81606",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ea85205654fd520",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e0716c295ddf551",
            "owner_id": "764673263023",
            "tags": {
              "Country": "jp",
              "Environment": "demo",
              "Name": "optima-jp-demo",
              "Project": "optima"
            },
            "tags_all": {
              "Country": "jp",
              "Environment": "demo",
              "Name": "optima-jp-demo",
              "Project": "optima"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}